--- a/static/public/css/public.css
+++ b/static/public/css/public.css
@@ -20,4 +20,24 @@ table tr:nth-child(odd) {
 table tr:nth-child(even) {
   background: #f5fafa;
 }
-
+a {
+  text-decoration: none;
+}
+.btn {
+  font-size: 15px;
+  height: 25px;
+  line-height: 25px;
+  border-radius: 3px;
+  border: 1px solid #666;
+  display: inline-block;
+  padding: 0 20px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+.primary {
+  color: #ffffff;
+  background-color: #5a98de;
+}
+.right {
+  float: right;
+}
